--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,9 @@ edition = "2021"
 [dependencies]
 divan = "0.1.14"
 fxhash = "0.2.1"
+paste = "1.0.15"
+twox-hash = "1.6.3"
+
 
 [[bench]]
 name = "meow"
