--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+ahash = "0.8.11"
 divan = "0.1.14"
+fasthash = "0.4.0"
 fxhash = "0.2.1"
+meowhash = "0.3.0"
 paste = "1.0.15"
 twox-hash = "1.6.3"
 
