--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 ahash = "0.8.11"
+blake3 = "1.5.1"
 cityhasher = "0.1.0"
 divan = "0.1.14"
 fasthash = "0.4.0"
@@ -12,6 +13,7 @@ fnv = "1.0.7"
 fxhash = "0.2.1"
 gxhash = "3.4.1"
 highway = "1.2.0"
+hud-slice-by-8 = "1.0.9"
 meowhash = "0.3.0"
 paste = "1.0.15"
 rustc-hash = { version = "2.0.0", features = ["nightly"] }
