Move from divan to criterion

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ repository = "https://github.com/blyxyas/hash-rosetta-rs"
 ahash = "0.8.11"
 blake3 = "1.5.1"
 cityhasher = "0.1.0"
-divan = "0.1.14"
+criterion = "0.5.1"
 fasthash = "0.4.0"
 fnv = "1.0.7"
 fxhash = "0.2.1"
